# ag-ui-crewai-research

./: .dockerignore  Dockerfile  LICENSE  README.md  crewai_flow.html  crewai_flow_example.py  package-lock.json  package.json
backend/: .gitignore  ARCHITECTURE.md  Dockerfile  EVENTBUS_README.md  Pipfile  README.md  debug_railway.py  example.env  generate_example_credentials.py  generate_secret.py  healthcheck.sh  new_crews.md  pyproject.toml  requirements.txt  run_server.py  start.sh  vercel.json
backend/src/chatbot/: ag_ui_server.py  auth.py  main.py
backend/src/chatbot/crews/research_crew/: research_crew.py
backend/src/chatbot/crews/research_crew/config/: agents.yaml  tasks.yaml
backend/src/chatbot/listeners/: __init__.py  real_time_listener.py
backend/src/chatbot/tools/: __init__.py  exa_answer_tool.py  exa_search_tool.py
backend/src/chatbot/utils/: chat_helpers.py  prompts.py
frontend/: example.env.local  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: ChatInterface.tsx  ExecutionTracker.tsx  FlowStateDisplay.tsx  ResearchResults.tsx
frontend/src/contexts/: TokenContext.tsx
