[project]
name = "chat"
version = "0.1.0"
description = "Perplexity-like search chatbot using CrewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "crewai-tools>=0.8.0",
    "litellm>=1.0.0",
    "asyncio",
    "pydantic>=2.0.0",
]

[project.scripts]
kickoff = "chat.main:kickoff"
run_crew = "chat.main:kickoff"
plot = "chat.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
